--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
 
     <h3>Score: <span id="score">0</span></h3>
+    <h3>Level: <span id="level">0</span></h3>
     <button id="start-button">Start/Pause</button>
     
     <div class="container">
