--- a/index.html
+++ b/index.html
@@ -242,8 +242,13 @@
             <div></div>
             <div></div>
         </div> 
+        <div class="buttons">
+            <button id="top">⬆️</button>
+            <br/>
+            <button id="left">⬅️</button>
+            <button id="down">⬇️</button>
+            <button id="right">➡️</button>
+        </div>
     </div>
-
-
     </body>
 </html>
