--- a/index.html
+++ b/index.html
@@ -3,14 +3,42 @@
     <meta charset="utf-8" />
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css"></link>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Vanilla JS Tetris</title>
   </head>
   <body>
-
-    <h3>Score: <span id="score">0</span></h3>
-    <h3>Level: <span id="level">0</span></h3>
-    <button id="start-button">Start/Pause</button>
-    
+    <div class="container head">
+        <div class="row">
+            <div class="col">
+                <h1>Tetris Game</h1>
+            </div>
+        </div>
+    </div>
+    <div class="container description mt-2">
+        <div class="row">
+            <div class="col" style="text-align: center">
+                <p>To play, simply click "start", and use your keyboard or the buttons provided to move the tetrinomoes! <br/><br/>
+                    The goal is to line them up - as soon as a row is covered, they'll disappear. Don't let them get to the top!<br/><br/>
+                    The left arrow moves the piece left, right arrow moves it right, down pushes it down faster, and up rotates the piece.<br/><br/>
+                    As you eliminate rows, your score increases! As your score increases, you level up. As you level up, the falling speed gets faster!<br/><br/>
+                    Good luck!</p>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-3">
+        <div class="row rowBox">
+            <div class="col-md-4">
+                <h4>Score: <span id="score">0</span></h3>
+            </div>
+            <div class="col-md-4">
+                <button id="start-button" class="btn btn-success">Start/Pause</button>
+            </div>
+            <div class="col-md-4">
+                <h4>Level: <span id="level">1</span></h3>
+            </div>
+        </div>
+    </div>
+    <br/>
     <div class="container">
         <div class="grid">
             <div></div>
@@ -224,31 +252,42 @@
             <div class="taken"></div>
             <div class="taken"></div>
         </div>    
-        <div class="mini-grid">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div> 
-        <div class="buttons">
-            <button id="top">⬆️</button>
-            <br/>
-            <button id="left">⬅️</button>
-            <button id="down">⬇️</button>
-            <button id="right">➡️</button>
+    <div class="mini-grid">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div> 
+    <div class="buttons">
+        <div class="container d-inline">
+            <div class="row">
+                <div class="col">
+                    <button id="top">⬆️</button>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <button id="left">⬅️</button>
+                    <button id="down">⬇️</button>
+                    <button id="right">➡️</button>
+                </div>
+            </div>
         </div>
     </div>
+</div>
     </body>
 </html>
